# TB4_NavigationStack

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  setup.sh
setup/turtlebot4/: setup.bash
setup/turtlebot4_discovery/: setup.bash
setup/turtlebot4_simulation/: setup.bash
src/robot_nav_ws/: big_map_home.pgm  big_map_home.yaml  map_bigger.pgm  map_bigger.yaml  map_name.pgm  map_name.yaml  map_name_1.pgm  map_name_1.yaml
src/robot_nav_ws/src/local_path_planning/artificial_potential_fields/apf_bringup/: CMakeLists.txt  package.xml
src/robot_nav_ws/src/local_path_planning/artificial_potential_fields/apf_nodes/: CMakeLists.txt  package.xml
src/robot_nav_ws/src/local_path_planning/artificial_potential_fields/apf_nodes/src/: dummy_apf_node.cpp
src/robot_nav_ws/src/mapping/: README.md
src/robot_nav_ws/src/mapping/mapping_bringup/: CMakeLists.txt  package.xml
src/robot_nav_ws/src/mapping/mapping_nodes/: CMakeLists.txt  package.xml
src/robot_nav_ws/src/mapping/mapping_nodes/src/: dummy_mapping_node.cpp
src/robot_nav_ws/src/turtlebot4/turtlebot4_description/urdf/sensors/: lidar3d.urdf.xacro
src/robot_nav_ws/src/turtlebot4/turtlebot4_description/urdf/standard/: turtlebot4.urdf.xacro
src/robot_nav_ws/src/turtlebot4_simulator/turtlebot4_ignition_bringup/launch/: ros_ign_bridge.launch.py  turtlebot4_spawn.launch.py
