<?xml version="1.0"?>
<package format="3">
  <name>apf_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration files for Artificial Potential Fields planner</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>apf_nodes</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
